# master-degree-ufsc-electrical-engineering

./: README.md
IIM/Study-Case-01/: README.md  code.ipynb  codeFinal.ipynb  pyproject.toml
IIM/Study-Case-01/LabTests/: UCI.ipynb  code-Test.ipynb  code.ipynb
IIM/Study-Case-01/catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
IIM/Study-Case-01/catboost_info/learn/: events.out.tfevents
IIM/Study-Case-01/catboost_info/test/: events.out.tfevents
IIM/Study-Case-01/dados/: timesAllPacient.csv  timesPacient.csv
IIM/Study-Case-02/: Relatorio-Jupyter.html  code.ipynb  code2.ipynb
PSB/T1/: ex01.ipynb  ex02.ipynb  ex03.ipynb  ex04.ipynb  pyproject.toml
PSB/T1/data/: ECGsignal01.csv  ECGtest03.csv
PSB/T1/src/: high_pass.py
PSB/T2/: pyproject.toml  work.ipynb
VisaoComputacional/: lab.ipynb  pyproject.toml  teste.ipynb
VisaoComputacional/common/: download.py  load_data.py  utils.py
