[tool.poetry]
name = "visaocomputacional"
version = "0.1.0"
description = ""
authors = ["derick-amontagna <derick.montagna@3778.care>"]

[tool.poetry.dependencies]
python = "^3.9"
kaggle = "^1.5.12"

[tool.poetry.dev-dependencies]
black = "^22.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
