[tool.poetry]
name = "visaocomputacional"
version = "0.1.0"
description = ""
authors = ["derick-amontagna <derick.montagna@3778.care>"]

[tool.poetry.dependencies]
python = "^3.9"
kaggle = "^1.5.12"
pandas = "^1.5.1"
scikit-learn = "^1.1.3"
matplotlib = "^3.6.2"
opencv-python = "^4.6.0"

[tool.poetry.dev-dependencies]
black = "^22.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
