[tool.poetry]
name = "study-case-01"
version = "0.1.0"
description = ""
authors = ["Derick  <derick.montagna@3778.care>"]

[tool.poetry.dependencies]
python = "^3.8"
plotly = "^5.8.2"
pandas = "^1.4.2"
wfdb = "^3.4.1"
scikit-learn = "^1.1.1"
PyWavelets = "^1.3.0"
catboost = "^1.0.6"
xgboost = "^1.6.1"
ipykernel = "^6.14.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
