[tool.poetry]
name = "psb-t1"
version = "0.1.0"
description = ""
authors = ["derick-amontagna <derick.montagna@3778.care>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23.5"
matplotlib = "^3.6.2"
scipy = "^1.9.3"
pandas = "^1.5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
